# helyim

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  codecov.yml  config.toml  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: build.yaml  codecov.yml  coverage.yml
benchmark/: Cargo.toml
benchmark/src/: lib.rs
helyim/: Cargo.toml
helyim-client/: Cargo.toml
helyim-client/src/: lib.rs  location.rs  pool.rs
helyim-common/: Cargo.toml
helyim-common/src/: args.rs  compression.rs  connector.rs  crc.rs  file.rs  lib.rs  parser.rs  sys.rs  time.rs  ttl.rs  version.rs
helyim-common/src/consts/: mod.rs  needle.rs  volume.rs
helyim-common/src/http/: mod.rs
helyim-common/src/images/: mod.rs
helyim-common/src/operation/: cluster.rs  mod.rs  upload.rs
helyim-common/src/sequence/: memory.rs  mod.rs  snowflake.rs
helyim-common/src/types/: file_id.rs  mod.rs  needle.rs
helyim-common/src/types/volume/: mod.rs  replica_placement.rs
helyim-directory/: Cargo.toml
helyim-directory/src/: args.rs  errors.rs  lib.rs  server.rs
helyim-directory/src/http/: extractor.rs  mod.rs
helyim-directory/src/operation/: assign.rs  lookup.rs  mod.rs
helyim-ec/: Cargo.toml
helyim-ec/src/: decoder.rs  encoder.rs  errors.rs  lib.rs  locate.rs  shard.rs  volume_info.rs
helyim-ec/src/needle/: mod.rs
helyim-ec/src/volume/: mod.rs
helyim-filer/: Cargo.toml
helyim-filer/examples/: multipart.rs
helyim-filer/src/: args.rs  deletion.rs  entry.rs  filer.rs  lib.rs  server.rs
helyim-filer/src/file_chunk/: mod.rs
helyim-filer/src/http/: extractor.rs  mod.rs
helyim-filer/src/operation/: assign.rs  lookup.rs  mod.rs
helyim-filer/src/store/: mod.rs  sled.rs
helyim-fs/: Cargo.toml
helyim-fs/src/: lib.rs
helyim-macros/: Cargo.toml
helyim-macros/src/: lib.rs
helyim-proto/src/: lib.rs
helyim-proto/src/proto/: helyim.proto  volume.proto
helyim-store/: Cargo.toml
helyim-store/src/: args.rs  disk_location.rs  lib.rs  server.rs  store.rs
helyim-store/src/erasure_coding/: disk_location.rs  mod.rs
helyim-store/src/http/: erasure_coding.rs  mod.rs
helyim-store/src/needle/: metric.rs  mod.rs  needle_map.rs  needle_value_map.rs
helyim-store/src/operation/: lookup.rs  mod.rs
helyim-store/src/volume/: checking.rs  delta_volume.rs  mod.rs  vacuum.rs
helyim-topology/: Cargo.toml
helyim-topology/src/: collection.rs  data_center.rs  data_node.rs  lib.rs  node.rs  rack.rs  topology.rs  volume_grow.rs  volume_layout.rs
helyim-topology/src/erasure_coding/: data_node.rs  mod.rs
helyim-topology/src/raft/: client.rs  mod.rs  types.rs
helyim-topology/src/raft/network/: api.rs  management.rs  raft.rs  raft_network_impl.rs
helyim-topology/src/raft/store/: log_store.rs  mod.rs
helyim-topology/src/volume/: mod.rs  vacuum.rs  volume_info.rs
helyim/benches/: read_files.rs  read_upload_files.rs  upload_file.rs  upload_files.rs
helyim/examples/: ec.rs
helyim/src/: errors.rs  lib.rs
helyim/src/client/: location.rs  mod.rs
helyim/src/directory/: api.rs  mod.rs  server.rs
helyim/src/directory/http/: extractor.rs  mod.rs
helyim/src/directory/topology/: collection.rs  data_center.rs  data_node.rs  mod.rs  rack.rs  topology.rs  vacuum.rs  volume_grow.rs  volume_layout.rs
helyim/src/filer/: api.rs  buckets.rs  deletion.rs  entry.rs  file_chunks.rs  mod.rs  server.rs  stream.rs  util.rs
helyim/src/filer/file_chunk/: mod.rs
helyim/src/filer/http/: extractor.rs  mod.rs
helyim/src/filer/redis/: mod.rs  redis_store.rs
helyim/src/filer/write/: mod.rs  write.rs  write_autochunk.rs
helyim/src/images/: mod.rs
helyim/src/io/: mmap.rs  mod.rs
helyim/src/operation/: assign.rs  cluster.rs  list_master.rs  lookup.rs  mod.rs  upload.rs  upload_content.rs
helyim/src/proto/: mod.rs  volume_info.rs
helyim/src/raft/: app.rs  client.rs  mod.rs  types.rs
helyim/src/raft/network/: api.rs  management.rs  mod.rs  raft.rs  raft_network_impl.rs
helyim/src/raft/store/: log_store.rs  mod.rs
helyim/src/sequence/: memory.rs  memory_sequencer.rs  mod.rs  snowflake.rs
helyim/src/storage/: api.rs  crc.rs  disk_location.rs  errors.rs  file.rs  file_id.rs  mod.rs  needle.rs  needle_map.rs  needle_value_map.rs  replica_placement.rs  server.rs  store.rs  ttl.rs  types.rs  version.rs  volume.rs  volume_info.rs  volume_vacuum.rs
helyim/src/storage/api/: erasure_coding.rs  mod.rs
helyim/src/storage/erasure_coding/: decoder.rs  disk_location.rs  encoder.rs  errors.rs  locate.rs  mod.rs  shard.rs  store.rs  volume.rs  volume_info.rs
helyim/src/storage/http/: erasure_coding.rs  extractor.rs  mod.rs
helyim/src/storage/needle/: metric.rs  mod.rs  needle_map.rs  needle_value_map.rs  sync.rs
helyim/src/storage/volume/: checking.rs  mod.rs  replica_placement.rs  vacuum.rs  volume_info.rs
helyim/src/topology/: collection.rs  data_center.rs  data_node.rs  mod.rs  node.rs  rack.rs  topology.rs  vacuum.rs  volume_grow.rs  volume_layout.rs
helyim/src/topology/erasure_coding/: data_center.rs  data_node.rs  mod.rs  rack.rs
helyim/src/util/: args.rs  chan.rs  connector.rs  file.rs  grpc.rs  http.rs  macros.rs  mod.rs  parser.rs  sys.rs  time.rs
helyim/src/util/http/: extractor.rs  mod.rs
helyim/tests/: topo.json
macros/: Cargo.toml
macros/src/: lib.rs
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
proto/src/proto/: filer.proto  helyim.proto  raft.proto  volume.proto
tests/: topo.json
