[workspace]
resolver = "2"
members = [
    "helyim",
    "benchmark",
    "proto",
]

[workspace.package]
authors = ["iamazy <iamazy.me@outlook.com>"]
edition = "2021"
version = "0.1.0"
homepage = "https://github.com/helyim/helyim/"
repository = "https://github.com/helyim/helyim"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-broadcast = "0.7"
async-scoped = "0.9"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.7"
axum-extra = "0.9"
axum-macros = "0.4"
bincode = "1"
bytes = "1"
chrono = "0.4"
clap = "4"
crc32fast = "1"
criterion = "0.5"
dashmap = "5"
faststr = "0.2"
futures = "0.3"
ginepro = "0.7.1"
heck = "0.4"
hyper = "1"
hyper-util = "0.1"
indexmap = "2"
kanal = "0.1.0-pre8"
leapfrog = "0.3"
libflate = "2"
lru = "0.12"
mime_guess = "2"
moka = "0.12"
multer = "3"
nom = "7"
once_cell = "1"
openraft = "0.9"
parking_lot = "0.12"
pprof = "0.13"
prost = "0.12"
rand = "0.8"
reed-solomon-erasure = { git = "https://github.com/helyim/reed-solomon-erasure", branch = "main" }
regex = "1"
reqwest = "0.11"
rustix = "0.38"
serde = "1"
serde_json = "^1"
sonyflake = "0.2"
tempfile = "3"
thiserror = "^1"
tokio = "1"
tokio-stream = "0.1.8"
tokio-uring = "0.4"
tonic = "0.11"
tonic-build = "0.11"
tower-http = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
url = "2"

# for macro
syn = "2"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"

[profile.release]
debug = true