[workspace]
resolver = "2"
members = [
    "helyim",
    "benchmark",
    "helyim-client",
    "helyim-common",
    "helyim-directory",
    "helyim-ec",
    "helyim-filer",
    "helyim-proto",
    "helyim-store",
    "helyim-topology",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["iamazy <iamazy.me@outlook.com>"]
documentation = "https://github.com/helyim/helyim"
homepage = "https://github.com/helyim/helyim/"
repository = "https://github.com/helyim/helyim"
categories = ["object-storage", "file-system", "distributed-system"]
keywords = ["helyim", "seaweedfs", "object-storage", "haystack", "raft"]

[workspace.dependencies]
arc-swap = "1"
async-broadcast = "0.7"
async-recursion = "1"
async-scoped = "0.9"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.8"
axum-extra = "0.10"
axum-macros = "0.5"
bincode = "1"
bytes = "1"
chrono = "0.4"
clap = "4"
crc32fast = "1"
criterion = "0.5"
dashmap = "5"
downcast-rs = "1"
faststr = "0.2"
fnv = "1"
futures = "0.3"
futures-util = "0.3"
ginepro = "0.8"
http-body = "1"
http-body-util = "0.1"
http-range = "0.1"
hyper = "1"
hyper-util = "0.1"
indexmap = "2"
itoa = "1"
kanal = "0.1.0-pre8"
leapfrog = "0.3"
libflate = "2"
mime = "0.3"
mime_guess = "2"
moka = "0.12"
multer = "3"
nom = "7"
once_cell = "1"
openraft = "0.9"
parking_lot = "0.12"
pin-project-lite = "0.2"
pprof = "0.13"
prost = "0.13"
rand = "0.8"
reed-solomon-erasure = { git = "https://github.com/helyim/reed-solomon-erasure", branch = "main", version = "6.0.0" }
regex = "1"
reqwest = { git = "https://github.com/iamazy/reqwest", branch = "pub_multipart", version = "0.12" }
rustix = "0.38"
serde = "1"
serde_json = "1"
sled = "0.34"
sonyflake = "0.2"
tempfile = "3"
thiserror = "^1"
tokio = "1"
tokio-stream = "0.1"
tonic = "0.12"
tonic-build = "0.12"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
turmoil = "0.6"
url = "2"

# for macro
syn = "2"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"

[profile.release]
debug = true
