[package]
name = "helyim-benchmark"
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion.workspace = true
pprof = { workspace = true, features = ["flamegraph", "criterion"] }