[package]
name = "helyim-client"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
async-stream.workspace = true
arc-swap.workspace = true
dashmap = { workspace = true, features = ["serde"] }
faststr = { workspace = true, features = ["serde"] }
futures.workspace = true
ginepro.workspace = true
helyim-common = { path = "../helyim-common" }
helyim-proto = { path = "../helyim-proto" }
once_cell.workspace = true
parking_lot.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true