[package]
name = "helyim-directory"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
async-broadcast.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-macros.workspace = true
clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true, features = ["serde"] }
faststr = { workspace = true, features = ["serde"] }
futures.workspace = true
helyim-client = { path = "../helyim-client" }
helyim-common = { path = "../helyim-common" }
helyim-proto = { path = "../helyim-proto" }
helyim-topology = { path = "../helyim-topology" }
hyper = { workspace = true, features = ["full"] }
hyper-util.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tonic.workspace = true
tower-http = { workspace = true, features = ["timeout", "set-header", "compression-gzip"] }
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
http-body-util.workspace = true
turmoil.workspace = true

