[package]
name = "helyim-filer"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
async-broadcast.workspace = true
async-recursion.workspace = true
async-scoped = { workspace = true, features = ["use-tokio"] }
async-trait.workspace = true
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-macros.workspace = true
bytes = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true, features = ["serde"] }
faststr = { workspace = true, features = ["serde"] }
fnv.workspace = true
futures.workspace = true
futures-util.workspace = true
helyim-client = { path = "../helyim-client" }
helyim-common = { path = "../helyim-common" }
helyim-proto = { path = "../helyim-proto" }
helyim-topology = { path = "../helyim-topology" }
http-range.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper-util.workspace = true
itoa.workspace = true
mime_guess.workspace = true
moka = { workspace = true, features = ["sync"] }
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }
rustix = { workspace = true, features = ["fs", "process"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tonic.workspace = true
tower-http = { workspace = true, features = ["timeout", "set-header", "compression-gzip"] }
tracing.workspace = true