[package]
name = "helyim-fs"
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true, features = ["serde"] }
cfg-if.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tokio-uring = { workspace = true, features = ["bytes"], optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["fs", "macros"] }
tokio-uring = { workspace = true, features = ["bytes"]}

[features]
default = []
iouring = ["tokio-uring"]