[package]
name = "helyim"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
description = """
helyim is a object storage written by Rust.
"""
documentation = "https://github.com/helyim/helyim"
readme = "README.md"
categories = ["object storage"]
keywords = ["helyim", "seaweedfs", "object storage", "s3", "rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-scoped = { workspace = true, features = ["use-tokio"] }
async-broadcast.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["multipart", "headers"] }
axum-extra.workspace = true
axum-macros.workspace = true
bincode.workspace = true
bytes = { workspace = true, features = ["serde"] }
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
crc32fast.workspace = true
faststr = { workspace = true, features = ["serde"] }
futures.workspace = true
ginepro.workspace = true
helyim-proto = { path = "../proto" }
hyper = { workspace = true, features = ["full"] }
libflate.workspace = true
lru.workspace = true
mime_guess.workspace = true
moka = { workspace = true, features = ["sync"] }
multer.workspace = true
nom.workspace = true
parking_lot.workspace = true
rand.workspace = true
rustix = { workspace = true, features = ["fs", "process"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sonyflake.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-uring = { workspace = true, optional = true }
tonic.workspace = true
tower-http = { workspace = true, features = ["timeout", "set-header", "compression-gzip"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
helyim-benchmark = { path = "../benchmark" }
pprof = { workspace = true, features = ["flamegraph", "criterion", "frame-pointer"] }
reqwest = { workspace = true, features = ["json", "blocking", "multipart"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }

[features]
default = []
iouring = ["tokio-uring"]

[[bench]]
name = "read_upload_files"
harness = false
