[package]
name = "helyim"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "../README.md"
description = """
helyim is a object storage written by Rust.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
helyim-common = { path = "../helyim-common" }
helyim-directory = { path = "../helyim-directory" }
helyim-filer = { path = "../helyim-filer" }
helyim-store = { path = "../helyim-store" }
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
bytes.workspace = true
criterion.workspace = true
helyim-benchmark = { path = "../benchmark" }
reqwest = { workspace = true, features = ["blocking"] }
serde_json.workspace = true

[[bench]]
name = "read_upload_files"
harness = false
