[package]
name = "helyim-macros"
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck.workspace = true
syn = { workspace = true, features = ["full"]}
prettyplease = { workspace = true, optional = true }
proc-macro2.workspace = true
quote.workspace = true

[lib]
proc-macro = true

[features]
default = []
pretty_print = ["prettyplease"]