[package]
name = "helyim-proto"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
description = """
proto for helyim
"""
documentation = "https://github.com/helyim/helyim"
readme = "../README.md"
categories = ["protobuf", "rpc"]
keywords = ["helyim", "seaweedfs", "object storage", "rust", "protobuf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
