[package]
name = "helyim-proto"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
readme = "../README.md"
description = """
proto for helyim
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
